// Copyright 2020 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package unifiedfleet.api.v1.models.chromeos.lab;

option go_package = "infra/unifiedfleet/api/v1/models/chromeos/lab;ufspb";

import "infra/unifiedfleet/api/v1/models/chromeos/device/config_id.proto";
import "infra/unifiedfleet/api/v1/models/chromeos/lab/chromeos_device_id.proto";
import "infra/unifiedfleet/api/v1/models/chromeos/lab/license.proto";
import "infra/unifiedfleet/api/v1/models/chromeos/lab/modeminfo.proto";
import "infra/unifiedfleet/api/v1/models/chromeos/lab/peripherals.proto";
import "infra/unifiedfleet/api/v1/models/chromeos/lab/rpm.proto";
import "infra/unifiedfleet/api/v1/models/chromeos/lab/servo.proto";
import "infra/unifiedfleet/api/v1/models/chromeos/lab/siminfo.proto";
import "infra/unifiedfleet/api/v1/models/chromeos/manufacturing/config_id.proto";
import "infra/unifiedfleet/api/v1/models/wifiinfo.proto";

import "go.chromium.org/chromiumos/config/proto/chromiumos/test/lab/api/cbi.proto";

// Next Tag: 7
message ChromeOSDevice {
  // A unique ID for chromeos device, a randomly generated uuid or AssetTag.
  ChromeOSDeviceID id = 1;
  string serial_number = 2;
  manufacturing.ConfigID manufacturing_id = 3;
  // Device config identifiers.
  // These values will be extracted from DUT and joinable to device config.
  device.ConfigId device_config_id = 4;

  oneof device {
    DeviceUnderTest dut = 5;
    Labstation labstation = 6;
  };
}

// Next Tag: 13
message DeviceUnderTest{
  string hostname = 1;
  Peripherals peripherals = 2;

  // critical_pools are pool labels that the builders are dependent on, and
  // that the cros-infra team is responsible for managing explicitly. All other
  // pool labels used for adhoc labeling of DUTs go into self_serve_pools.
  // TO BE DELETED
  enum DUTPool {
    DUT_POOL_INVALID = 0;
    DUT_POOL_CQ = 1;
    DUT_POOL_BVT = 2;
    DUT_POOL_SUITES = 3;
    DUT_POOL_CTS = 4;
    DUT_POOL_CTS_PERBUILD = 5;
    DUT_POOL_CONTINUOUS = 6;
    DUT_POOL_ARC_PRESUBMIT = 7;
    DUT_POOL_QUOTA = 8;
  }
  repeated DUTPool critical_pools = 3;

  repeated string pools = 4;

  repeated License licenses = 5;

  ModemInfo modeminfo = 6;

  repeated SIMInfo siminfo = 7;

  map<string, string> ro_vpd_map = 8;

  // CBI contents on the DUT
  chromiumos.test.lab.api.Cbi cbi = 9;

  // Capability to support Chromebook X features
  bool cbx = 10;

  // Provide DUT/drone affinity
  // Example: satlab-abc123
  string hive = 11;

  // The secret for wifi tests.
  WifiSecret wifi_secret = 12;
}

// Next Tag: 5
message Labstation {
  string hostname = 1;
  repeated Servo servos = 2;
  OSRPM rpm = 3;
  repeated string pools = 4;
}

// Next Tag: 3
message Devboard {
  Servo servo = 1;
  repeated string pools = 2;
}
